--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
+    "knex": "^3.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
+    "sass": "^1.77.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
